--- a/comet/View/PullRequestCollectionViewItem.xib
+++ b/comet/View/PullRequestCollectionViewItem.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16096" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16096"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,13 +22,13 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <box boxType="custom" borderWidth="0.0" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="N2P-Fa-MG1">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
+                    <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
                     <view key="contentView" id="AFa-A8-ihY">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <color key="borderColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,7 +69,7 @@
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tXQ-Sf-F6s">
                                 <rect key="frame" x="-2" y="2" width="20" height="12"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" id="hRO-m2-VS6">
-                                    <font key="font" metaFont="system" size="9"/>
+                                    <font key="font" metaFont="miniSystem"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
@@ -96,20 +96,20 @@
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ryh-bx-jje"/>
                 </imageView>
                 <stackView distribution="fill" orientation="vertical" alignment="leading" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H7u-wH-I4u">
-                    <rect key="frame" x="98" y="9" width="286" height="27"/>
+                    <rect key="frame" x="98" y="9" width="310" height="27"/>
                     <subviews>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ucs-x1-yMM">
-                            <rect key="frame" x="0.0" y="12" width="286" height="15"/>
+                            <rect key="frame" x="0.0" y="12" width="310" height="15"/>
                             <textFieldCell key="cell" lineBreakMode="charWrapping" drawsBackground="YES" id="p1F-PW-RJa">
-                                <font key="font" metaFont="system" size="12"/>
+                                <font key="font" metaFont="cellTitle"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </textFieldCell>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aPd-qt-Zta">
-                            <rect key="frame" x="-2" y="0.0" width="290" height="12"/>
+                            <rect key="frame" x="-2" y="0.0" width="314" height="12"/>
                             <textFieldCell key="cell" lineBreakMode="clipping" id="tAs-tE-VYT">
-                                <font key="font" metaFont="system" size="9"/>
+                                <font key="font" metaFont="miniSystem"/>
                                 <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
@@ -131,7 +131,7 @@
                     </customSpacing>
                 </stackView>
                 <box boxType="custom" borderWidth="0.0" title="Box" transparent="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YzC-dd-kKe" customClass="ReviewerIconContainerView" customModule="comet" customModuleProvider="target">
-                    <rect key="frame" x="388" y="0.0" width="80" height="44"/>
+                    <rect key="frame" x="412" y="0.0" width="80" height="44"/>
                     <view key="contentView" id="r6f-eF-QXo">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="44"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -146,6 +146,20 @@
                         <outlet property="widthConstraint" destination="xZ9-Bo-OqP" id="Gcp-HD-0Et"/>
                     </connections>
                 </box>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="5vu-lq-VSR">
+                    <rect key="frame" x="494" y="12" width="36" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="36" id="L6M-C8-j6M"/>
+                        <constraint firstAttribute="height" constant="20" id="aBq-kq-jea"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="read" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="DgN-mN-v73">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="pushReadButton:" target="-2" id="Fnz-eP-t5h"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="YzC-dd-kKe" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="3qY-lO-VfO"/>
@@ -154,13 +168,15 @@
                 <constraint firstItem="N2P-Fa-MG1" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="6Tb-Kk-EEe"/>
                 <constraint firstAttribute="trailing" secondItem="N2P-Fa-MG1" secondAttribute="trailing" id="7LE-9q-O4T"/>
                 <constraint firstItem="N2P-Fa-MG1" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="Jsg-SO-cZf"/>
+                <constraint firstAttribute="trailing" secondItem="5vu-lq-VSR" secondAttribute="trailing" constant="12" id="Lq3-h9-1V7"/>
+                <constraint firstItem="5vu-lq-VSR" firstAttribute="leading" secondItem="YzC-dd-kKe" secondAttribute="trailing" constant="2" id="NZa-yi-v9B"/>
                 <constraint firstItem="eb1-PA-FJA" firstAttribute="leading" secondItem="gIV-0z-dfO" secondAttribute="leading" constant="-8" id="PhF-Sc-Hrw"/>
                 <constraint firstItem="H7u-wH-I4u" firstAttribute="leading" secondItem="6At-4A-06S" secondAttribute="trailing" constant="12" id="QqS-yV-nk8"/>
-                <constraint firstItem="YzC-dd-kKe" firstAttribute="leading" secondItem="H7u-wH-I4u" secondAttribute="trailing" constant="4" id="Zkm-Cc-3bN"/>
+                <constraint firstItem="YzC-dd-kKe" firstAttribute="leading" secondItem="H7u-wH-I4u" secondAttribute="trailing" constant="4" id="RhM-YE-jSz"/>
                 <constraint firstItem="H7u-wH-I4u" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="bWH-ej-9AA"/>
                 <constraint firstItem="eb1-PA-FJA" firstAttribute="top" secondItem="gIV-0z-dfO" secondAttribute="top" constant="-6" id="d0X-EF-wWl"/>
+                <constraint firstItem="5vu-lq-VSR" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="kH2-4G-Zy4"/>
                 <constraint firstItem="gIV-0z-dfO" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="mBB-j4-orI"/>
-                <constraint firstAttribute="trailing" secondItem="YzC-dd-kKe" secondAttribute="trailing" constant="12" id="mU1-xJ-Cdv"/>
                 <constraint firstAttribute="bottom" secondItem="N2P-Fa-MG1" secondAttribute="bottom" id="oO4-S0-kq7"/>
                 <constraint firstItem="gIV-0z-dfO" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="22" id="stR-3K-2Kx"/>
             </constraints>
@@ -168,4 +184,7 @@
         </customView>
         <collectionViewItem nibName="PullRequestCollectionViewItem" id="0tb-lj-M8c" customClass="PullRequestCollectionViewItem" customModule="comet" customModuleProvider="target"/>
     </objects>
+    <resources>
+        <image name="read" width="32" height="32"/>
+    </resources>
 </document>
