--- a/comet/View/PullRequestCollectionViewItem.xib
+++ b/comet/View/PullRequestCollectionViewItem.xib
@@ -25,7 +25,7 @@
             <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <box boxType="custom" borderWidth="0.0" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="N2P-Fa-MG1">
+                <box boxType="custom" borderWidth="0.0" title="Box" transparent="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N2P-Fa-MG1">
                     <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
                     <view key="contentView" id="AFa-A8-ihY">
                         <rect key="frame" x="0.0" y="0.0" width="542" height="44"/>
@@ -43,7 +43,7 @@
                                 <rect key="frame" x="0.0" y="4" width="22" height="14"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" drawsBackground="YES" id="tKZ-Gu-md8">
                                     <font key="font" metaFont="message" size="11"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" white="0.20497909330985919" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </textFieldCell>
                             </textField>
